--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="flexible-container">
         <div class="common-width">
-            <h1><span id="tomato-color">Skip</span> The Diet,</h1>
+            <h1><span class="tomato-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Serve Food </h1>
             <p>Imagine you don't need a diet because we provided healthy or delicious food for you!</p>
@@ -34,6 +34,69 @@
             <p>I'm Naimul Hasan, i learning new web development . Inshallah one day i will be a very big developer and
                 work in a big company, I will also make something that is first in Bangladesh </p>
             <a target="-blank" href="https://www.facebook.com/profile.php?id=100008151618032">Contact me</a>
+        </div>
+    </section>
+    <section>
+        <div class="recipies">
+            <h2>My Recipies</h2>
+            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolore deserunt deleniti earum odit
+                mollitia enim, sapiente ipsam saepe expedita?</h6>
+        </div>
+        <div class="flexible-container">
+            <div>
+                <img src="images/food/Project Cover8.png" alt="">
+                <h2>Berger</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum voluptas quam voluptatibus
+                    dignissimos dolorem ducimus blanditiis harum omnis minima.</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover7.png" alt="">
+                <h2>Sandwich</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam saepe exercitationem corporis
+                    itaque animi eum obcaecati maiores iusto.</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover6.png" alt="">
+                <h2>Pizza</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti facilis ex! Repellat
+                    sunt consequuntur in fugiat, ipsam fuga veritatis minima nemo placeat!</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="order-menu">
+            <h2 class="tomato-color">Order Menu</h2>
+        </div>
+        <div class="manu-item">
+            <div id="breakfast">
+                <h3>Breakfast</h3>
+                <ul>
+                    <li>parata</li>
+                    <li>Vegetables</li>
+                    <li>Egg</li>
+                    <li>Pea</li>
+                </ul>
+            </div>
+            <div>
+                <h3 id="lunch">Lunch</h3>
+                <ul>
+                    <li>Rice</li>
+                    <li>Fish</li>
+                    <li>Meat</li>
+                    <li>Vorta</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="dinner">Dinner</h3>
+                <ul>
+                    <li>Rice</li>
+                    <li>Fish</li>
+                    <li>Meat</li>
+                    <li>Vorta</li>
+                </ul>
+            </div>
         </div>
     </section>
 </body>
