header and footer added

--- a/index.html
+++ b/index.html
@@ -10,16 +10,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/need-image/profile1.png" type="image/x-icon">
 </head>
 
 <body>
+    <header>
+        <header id="home">
+            <div class="menu">
+                <div class="logo"><a href=""><span>Serve</span>Food</a></div>
+                <ul>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
+                    <li><a href="searvis">Searvis</a></li>
+                    <li><a href="order">Order New</a></li>
+                    <li><a href="blog">Blog</a></li>
+                </ul>
+            </div>
+        </header>
+    </header>
     <section class="flexible-container">
         <div class="common-width">
             <h1><span class="tomato-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Serve Food </h1>
             <p>Imagine you don't need a diet because we provided healthy or delicious food for you!</p>
-            <a target="-blank" href="www.foodpanda.com">Order Food</a>
+            <a class="orange-color" target="-blank" href="www.foodpanda.com">Order Food</a>
         </div>
         <div class="common-width">
             <img src="images/need-image/young guy.png" alt="">
@@ -33,7 +49,8 @@
             <h1>About me</h1>
             <p>I'm Naimul Hasan, i learning new web development . Inshallah one day i will be a very big developer and
                 work in a big company, I will also make something that is first in Bangladesh </p>
-            <a target="-blank" href="https://www.facebook.com/profile.php?id=100008151618032">Contact me</a>
+            <a class="orange-color" target="-blank"
+                href="https://www.facebook.com/profile.php?id=100008151618032">Contact me</a>
         </div>
     </section>
     <section>
@@ -42,25 +59,40 @@
             <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolore deserunt deleniti earum odit
                 mollitia enim, sapiente ipsam saepe expedita?</h6>
         </div>
-        <div class="flexible-container">
-            <div>
-                <img src="images/food/Project Cover8.png" alt="">
+        <div class="flexible-container third-part">
+            <div class="berger">
+                <img class="pic" src="images/food/Project Cover8.png" alt="">
                 <h2>Berger</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum voluptas quam voluptatibus
                     dignissimos dolorem ducimus blanditiis harum omnis minima.</p>
             </div>
-            <div>
-                <img src="images/food/Project Cover7.png" alt="">
+            <div class="berger">
+                <img class="pic" src="images/food/Project Cover7.png" alt="">
                 <h2>Sandwich</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam saepe exercitationem corporis
                     itaque animi eum obcaecati maiores iusto.</p>
             </div>
-            <div>
-                <img src="images/food/Project Cover6.png" alt="">
+            <div class="berger">
+                <img class="pic" src="images/food/Project Cover2.png" alt="">
                 <h2>Pizza</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti facilis ex! Repellat
                     sunt consequuntur in fugiat, ipsam fuga veritatis minima nemo placeat!</p>
             </div>
+        </div>
+    </section>
+
+    <section id="follower-part">
+        <div>
+            <h1>700k</h1>
+            <h6>you tube subscribers</h6>
+        </div>
+        <div>
+            <h1>2.4m</h1>
+            <h6>instragram followers</h6>
+        </div>
+        <div>
+            <h1>100k</h1>
+            <h6>Dribble shot light</h6>
         </div>
     </section>
 
@@ -69,7 +101,7 @@
         <div class="order-menu">
             <h2 class="tomato-color">Order Menu</h2>
         </div>
-        <div class="manu-item">
+        <div class="menu-item">
             <div id="breakfast">
                 <h3>Breakfast</h3>
                 <ul>
@@ -99,6 +131,20 @@
             </div>
         </div>
     </section>
+
+    <section id="order-part">
+        <input type="Text" name="" id="" placeholder="Name"> <br>
+        <input type="password" name="" id="" placeholder="E-mail"><br>
+        <input type="phone" name="" id="" placeholder="Phone"><br>
+        <button class="buttom-color">SUBMIT</button>
+    </section>
+
+    <footer>
+        <div>
+            <h1><span class="tomato-color">Sarve</span> Food</h1>
+            <p style="text-align: center; color: beige;">Eat healthy to live healthy, Live healthy to live happy</p>
+        </div>
+    </footer>
 </body>
 
 </html>
