third part and followr part added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- header part -->
     <header>
         <header id="home">
             <div class="menu">
@@ -21,19 +22,19 @@
                 <ul>
                     <li><a href="home">Home</a></li>
                     <li><a href="about">About</a></li>
-                    <li><a href="contact">Contact</a></li>
-                    <li><a href="searvis">Searvis</a></li>
-                    <li><a href="order">Order New</a></li>
-                    <li><a href="blog">Blog</a></li>
+                    <li><a href="contact">Contact Us</a></li>
+                    <li><a href="searvis">Services</a></li>
+                    <li><a href="order">Order</a></li>
                 </ul>
             </div>
         </header>
     </header>
+    <!-- first part -->
     <section class="flexible-container">
         <div class="common-width">
             <h1><span class="tomato-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
-            <h1>With Serve Food </h1>
+            <h1>With <span id="serve-color">Serve</span><span id="food-color">Food</span></h1>
             <p>Imagine you don't need a diet because we provided healthy or delicious food for you!</p>
             <a class="orange-color" target="-blank" href="www.foodpanda.com">Order Food</a>
         </div>
@@ -53,34 +54,36 @@
                 href="https://www.facebook.com/profile.php?id=100008151618032">Contact me</a>
         </div>
     </section>
-    <section>
-        <div class="recipies">
-            <h2>My Recipies</h2>
-            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolore deserunt deleniti earum odit
-                mollitia enim, sapiente ipsam saepe expedita?</h6>
+    <!-- second part -->
+    <section class="second-part">
+        <div id="recipies">
+            <h1>My Recipies</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus magni, assumenda explicabo consectetur
+                repudiandae dolor ea dolorem accusantium? Obcaecati, quasi.</p>
         </div>
-        <div class="flexible-container third-part">
-            <div class="berger">
-                <img class="pic" src="images/food/Project Cover8.png" alt="">
-                <h2>Berger</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum voluptas quam voluptatibus
-                    dignissimos dolorem ducimus blanditiis harum omnis minima.</p>
+        <div class="flexible-container item-part">
+            <div class="about-item">
+                <img src="images/food/Project Cover5.png" alt="">
+                <h3 class="title-blog">Berger</h3>
+                <p>A sandwich is a food typically consisting of vegetables, sliced cheese or meat, placed on or between
+                    slices of bread.</p>
             </div>
-            <div class="berger">
-                <img class="pic" src="images/food/Project Cover7.png" alt="">
-                <h2>Sandwich</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam saepe exercitationem corporis
-                    itaque animi eum obcaecati maiores iusto.</p>
+            <div class="about-item">
+                <img src="images/food/Project Cover6.png" alt="">
+                <h3 class="title-blog">Sandwich</h3>
+                <p>A sandwich is a food typically consisting of vegetables, sliced cheese or meat, placed on or between
+                    slices of bread.</p>
             </div>
-            <div class="berger">
-                <img class="pic" src="images/food/Project Cover2.png" alt="">
-                <h2>Pizza</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti facilis ex! Repellat
-                    sunt consequuntur in fugiat, ipsam fuga veritatis minima nemo placeat!</p>
+            <div class="about-item">
+                <img src="images/food/Project Cover7.png" alt="">
+                <h3 class="title-blog">Pizza</h3>
+                <p>Pizza is a very popular food for our young people . We made it very softly and highly. Preyer for me
+                    everybodyfor it.</p>
             </div>
         </div>
     </section>
 
+    <!-- third part -->
     <section id="follower-part">
         <div>
             <h1>700k</h1>
@@ -96,7 +99,7 @@
         </div>
     </section>
 
-
+    <!-- fourth part -->
     <section>
         <div class="order-menu">
             <h2 class="tomato-color">Order Menu</h2>
@@ -125,8 +128,8 @@
                 <ul>
                     <li>Rice</li>
                     <li>Fish</li>
-                    <li>Meat</li>
-                    <li>Vorta</li>
+                    <li>Vegetables</li>
+                    <li>Biriyani</li>
                 </ul>
             </div>
         </div>
@@ -141,7 +144,7 @@
 
     <footer>
         <div>
-            <h1><span class="tomato-color">Sarve</span> Food</h1>
+            <h1><span id="serve-color">Serve</span><span id="food-color">Food</span></h1>
             <p style="text-align: center; color: beige;">Eat healthy to live healthy, Live healthy to live happy</p>
         </div>
     </footer>
