added third and full site

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="second-part">
         <div id="recipies">
             <h1>My Recipies</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus magni, assumenda explicabo consectetur
-                repudiandae dolor ea dolorem accusantium? Obcaecati, quasi.</p>
+            <p>We made Berger, Sandwich, Pizza and more other. pizza is very special in our shop. Inshallah if you eat
+                here one time, you must come another time for eat.</p>
         </div>
         <div class="flexible-container item-part">
             <div class="about-item">
@@ -75,7 +75,7 @@
                     slices of bread.</p>
             </div>
             <div class="about-item">
-                <img src="images/food/Project Cover7.png" alt="">
+                <img src="images/food/Project Cover8.png" alt="">
                 <h3 class="title-blog">Pizza</h3>
                 <p>Pizza is a very popular food for our young people . We made it very softly and highly. Preyer for me
                     everybodyfor it.</p>
